# libtess2

./: CMakeLists.txt
Include/: tesselator.h  tesselator_cpp.h
Source/: priorityq.c  tess.c
